--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" type="text/css" href="app/lib/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="app/styles/styles.css">
   <title>To Dew</title>
 </head>
 <body ng-app='todew'>
-  <div data-ng-view>
-    <!-- Views get rendered here -->
-    {{ greeting }}
+  <div class="row">
+  <div class="col-md-3"></div>
+  <div class="col-md-6">
+    <div data-ng-view>
+      <!-- Views get rendered here -->
+    </div>
   </div>
+  <div class="col-md-3"></div>
+</div>
+
 </body>
 
 <script src='app/lib/angular.min.js'></script>
