--- a/src/index.html
+++ b/src/index.html
@@ -4,27 +4,28 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" type="text/css" href="app/lib/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="app/lib/bootstrap/css/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="app/styles/styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
   <title>To Dew</title>
 </head>
 <body ng-app='todew'>
   <div class="row">
-  <div class="col-md-3"></div>
-  <div class="col-md-6">
+  <div class="col-md-4"></div>
+  <div class="col-md-4">
     <div data-ng-view>
       <!-- Views get rendered here -->
     </div>
   </div>
-  <div class="col-md-3"></div>
+  <div class="col-md-4"></div>
 </div>
 
 </body>
 
 <script src='app/lib/angular.min.js'></script>
 <script src='app/lib/jquery.min.js'></script>
-<script src='app/lib/bootstrap.min.js'></script>
-<script src='app/lib/ui-bootstrap.min.js'></script>
+<script src='app/lib/bootstrap/js/bootstrap.min.js'></script>
+<script src='app/lib/bootstrap/js/ui-bootstrap.min.js'></script>
 <script src='app/lib/angular-route.min.js'></script>
 
 <script src='app/app.js'></script>
