--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" type="text/css" href="app/lib/bootstrap/css/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="app/lib/bootstrap/css/weather-icons.min.css">
   <link rel="stylesheet" type="text/css" href="app/styles/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 
