--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,7 @@
 <script src='app/lib/bootstrap/js/bootstrap.min.js'></script>
 <script src='app/lib/bootstrap/js/ui-bootstrap.min.js'></script>
 <script src='app/lib/angular-route.min.js'></script>
+<script src='app/lib/angular-animate.min.js'></script>
 
 <script src='app/app.js'></script>
 <script src='app/controllers/homepageController.js'></script>
